# CADEN

./: .gitignore  =1.2  CADEN.md  CADEN_buildBrief.md  CADEN_dashboard.md  CADEN_docClaimsMatrix.md  CADEN_gapList.md  CADEN_index.md  CADEN_intake.md  CADEN_learning.md  CADEN_learning_libbie_scientific_audit.md  CADEN_libbie.md  CADEN_projectManager.md  CADEN_sprocket.md  CADEN_testMatrix.md  CADEN_thougtDump.md  CADEN_v0.md  README.md  caden-base.css  caden-colors.js  check_retrieve.py  count_matrix.py  dev.bat  get_ids.py  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_script.py  tsconfig.json  vite.config.ts
caden/: __init__.py  config.py  diag.py  errors.py  log.py  main.py
searxng/: docker-compose.yml  settings.yml
src/: App.tsx  caden-colors.d.ts  colorOverrideScript.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: color_override_inject.js  commands.rs  lib.rs  main.rs  plugin_registry.rs  pty.rs
src-tauri/src/calendar_agent/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  ops.rs  schema.sql
src-tauri/src/google/: mod.rs
src-tauri/src/moodle/: mod.rs
src-tauri/src/ollama/: mod.rs
src-tauri/src/planner/: mod.rs
src-tauri/src/projects/: mod.rs
src-tauri/src/sean_model/: circadian.rs  mod.rs  profile.rs  retrieval.rs
src-tauri/src/search/: mod.rs
src-tauri/src/state_engine/: mod.rs
src-tauri/src/training/: mod.rs
tests/: conftest.py  test_contract_boot.py  test_contract_chat.py  test_contract_config.py  test_contract_curate.py  test_contract_db.py  test_contract_diag.py  test_contract_edit_task.py  test_contract_error_hierarchy.py  test_contract_errors.py  test_contract_google_auth.py  test_contract_google_sync.py  test_contract_gui.py  test_contract_learning.py  test_contract_learning_adaptation.py  (+21 more)
(+217 files in other folders)
