[project]
name = "caden"
version = "0.0.1"
description = "CADEN v0 — local-first personal AI for Sean"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.79",
    "httpx>=0.27",
    "sqlite-vec>=0.1.6",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "google-api-python-client>=2.140",
    "google-auth>=2.33",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "platformdirs>=4.2",
    "dateparser>=1.2",
    "json_repair>=0.30",
    "pydantic>=2.0",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "structlog>=24.1",
]

[project.scripts]
caden = "caden.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["caden*"]
