[package]
name = "caden"
version = "0.1.0"
description = "CADEN — Chaos Aiming and Distress Evasion Navigator"
authors = []
edition = "2021"

[lib]
name = "caden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "migrate",
] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
urlencoding = "2"

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
